# elrond-storage-contract

./: Cargo.toml  README.md  erdpy.json
docs/: introduce.md
mandos/: storage-order-call-node-add.scen.json  storage-order-call-node-duplicated.scen.json  storage-order-call-node-remove.scen.json  storage-order-call-set-price.scen.json  storage-order-call-token-add.scen.json  storage-order-call-token-duplicated.scen.json  storage-order-call-token-remove.scen.json  storage-order-init.scen.json
meta/: Cargo.toml
meta/src/: main.rs
src/: storage_order.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
