[package]
name = "storage-order"
version = "0.0.1"
authors = [ "yaoz",]
edition = "2018"
publish = false

[lib]
path = "src/storage_order.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.29.3"

[dependencies.elrond-wasm-derive]
version = "0.29.3"

[dependencies.elrond-wasm-node]
version = "0.29.3"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.29.3"
